# patazon

./: .gitignore  Cargo.toml
devvault/.obsidian/: graph.json  workspace.json
devvault/00 - MOCs/: 🎮 Gameplay Engine MOC.md  🎵 Simfile Parsing MOC.md  🏠 Home.md  🔊 Audio System MOC.md
devvault/01 - Simfile Concepts/: BGA and BGI Channels.md  Channel Data.md  Editor-Specific Commands.md  Format Compatibility.md  Header Commands.md  Resource Mapping.md  Simfile Parsing Strategy.md  Simfile Structure Overview.md  Special Commands.md  WAV Properties.md
devvault/02 - Gameplay Concepts/: Advanced Gameplay Mechanics.md  Default Timing Windows and Configuration.md  Game State Machine.md  Groove Gauge.md  Input Handling.md  Judgment System.md  Note Rendering and Scrolling.md  Scoring System.md
devvault/03 - Audio Concepts/: Core Audio Architecture.md  Hi-Hat Choking.md  Master Audio Clock.md  Mixing and the Rendering Pipeline.md  Playback Speed Adjustment.md  Polyphony.md  Sound Asset Lifecycle.md  Timing and Scheduling.md
devvault/04 - Engine Architecture Concepts/: Headless Modes.md  Managed vs. Unmanaged Resources.md  Metadata Caching.md  Performance and Latency.md  Plugin Architecture.md  Skinning System.md
devvault/98 - Old Guides/: DTXManiaAudioGuide.md  DTXManiaGameplayGuide.md  SimfileParsingGuide.md
examples/dtx/022 Kiarosukuuro/: mstr.dtx
examples/dtx/396 - Goodbye -album version-/: goodbye-adv.dtx  goodbye-bas.dtx  goodbye-ext.dtx  goodbye-mas.dtx  set.def
playground/: dtx_player.py  midi-connect.py
