[package]
name = "patazon"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
wayland-backend = { version = "0.3.10"}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
regex = "1.10.4"
encoding_rs = "0.8.33"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
